# homelab

./: .envrc  .gitattributes  .gitconfig  .gitignore  .pdm-python  .pre-commit-config.yaml  .sops.yaml  README.md  TODO.md  ansible.cfg  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  (+1 more)
infrastructure/ansible/: .envrc  .pdm-python  .pre-commit-config.yaml  ansible.cfg  pyproject.toml
infrastructure/ansible/collections/: requirements.yaml
infrastructure/ansible/collections/ansible_collections/kpfleming.powerdns_auth-24.1.0.info/: GALAXY.yml
infrastructure/ansible/collections/ansible_collections/kpfleming/powerdns_auth/: FILES.json  MANIFEST.json
infrastructure/ansible/filter_plugins/: core.py
infrastructure/ansible/inventories/: general_vars.yaml  general_vault.yaml
infrastructure/ansible/inventories/production/: inventory.yaml
infrastructure/ansible/inventories/production/group_vars/all/: 000_cross_env_vars.yaml  000_cross_env_vault.yaml
infrastructure/ansible/inventories/staging/: inventory.yaml
infrastructure/ansible/inventory/staging/: inventory.yaml
infrastructure/ansible/playbooks/: init_tinyca.yml  pdns.yaml  pdns.yml  servers.yml  tinyca.yml
infrastructure/ansible/roles/cloudstack/management/: README.md
infrastructure/ansible/roles/cloudstack/management/defaults/: main.yml
infrastructure/ansible/roles/cloudstack/management/handlers/: main.yml
infrastructure/ansible/roles/core/noise_generator/: README.md
infrastructure/ansible/roles/core/powerdns/: README.md
infrastructure/ansible/roles/core/step_ca/: README.md
(+92 files in other folders)
