[project]
name = "homelab"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Somaimo", email = "marc@polarsofa.ch"},
]
dependencies = [
    "ansible>=10.1.0",
    "ansible-lint>=24.6.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Unlincense"}


[tool.pdm]
distribution = false
